orders and crm page ui fix
